Skip to content

android vout shader HW issue

11-08 10:29:05.852 16761 16921 D VLC     : [0000007eb85c0540/4219] libvlc gl: libplacebo shader: (unknown shader)
11-08 10:29:05.861 16761 16921 E VLC     : [0000007eb8529800/4219] libvlc generic: Shader source:
11-08 10:29:05.861 16761 16921 E VLC     :    1: #version 300 es
11-08 10:29:05.861 16761 16921 E VLC     :    2: #extension GL_OES_EGL_image_external : require
11-08 10:29:05.861 16761 16921 E VLC     :    3: precision highp float;
11-08 10:29:05.861 16761 16921 E VLC     :    4: uniform samplerExternalOES Textures[1];
11-08 10:29:05.861 16761 16921 E VLC     :    5:
11-08 10:29:05.861 16761 16921 E VLC     :    6: vec4 _main_0_0(vec4 color) {
11-08 10:29:05.861 16761 16921 E VLC     :    7: return color;
11-08 10:29:05.861 16761 16921 E VLC     :    8: }
11-08 10:29:05.861 16761 16921 E VLC     :    9:
11-08 10:29:05.861 16761 16921 E VLC     :   10: vec4 vlc_texture(vec2 tex_coords) {
11-08 10:29:05.861 16761 16921 E VLC     :   11:  vec4 result = texture(Textures[0], tex_coords);
11-08 10:29:05.861 16761 16921 E VLC     :   12:  result = _main_0_0(result);
11-08 10:29:05.861 16761 16921 E VLC     :   13:  return result;
11-08 10:29:05.861 16761 16921 E VLC     :   14: }
11-08 10:29:05.861 16761 16921 E VLC     :   15: #if __VERSION__ < 300
11-08 10:29:05.861 16761 16921 E VLC     :   16: #define FragColor gl_FragColor
11-08 10:29:05.861 16761 16921 E VLC     :   17: varying vec2 PicCoords;
11-08 10:29:05.861 16761 16921 E VLC     :   18: #else
11-08 10:29:05.861 16761 16921 E VLC     :   19: in vec2 PicCoords;
11-08 10:29:05.861 16761 16921 E VLC     :   20: out vec4 FragColor;
11-08 10:29:05.861 16761 16921 E VLC     :   21: #endif
11-08 10:29:05.861 16761 16921 E VLC     :   22: void main() {
11-08 10:29:05.861 16761 16921 E VLC     :   23:  FragColor = vlc_texture(PicCoords);
11-08 10:29:05.861 16761 16921 E VLC     :   24: }
11-08 10:29:05.861 16761 16921 E VLC     : [0000007eb8529800/4219] libvlc generic: shader: ERROR: 0:4: 'samplerExternalOES' : requires extension GL_OES_EGL_image_external_essl3 to be enabled
11-08 10:29:05.861 16761 16921 E VLC     : ERROR: 1 compilation errors.  No code generated.
11-08 10:29:05.861 16761 16921 E VLC     :
11-08 10:29:05.861 16761 16921 E VLC     : [0000007eb8529800/4219] libvlc generic: Failed to compile shader
11-08 10:29:05.861 16761 16921 D VLC     : [0000007eb41afb60/4219] libvlc generic: no opengl filter modules matched with name renderer
11-08 10:29:05.861 16761 16921 E VLC     : [0000007eb85c0540/4219] libvlc gl: Could not load OpenGL filter 'renderer'
11-08 10:29:05.861 16761 16921 W VLC     : [0000007eb85c0540/4219] libvlc gl: Could not create renderer for ANOP
11-08 10:29:05.861 16761 16921 E VLC     : [0000007eb85c0540/4219] libvlc gl: Could not create filters

full logs: https://code.videolan.org/-/snippets/1793

Frame is displayed but no HW.

Edited by Martin Finkel
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information